[gd_scene load_steps=2 format=3 uid="uid://dxjxve3gmc8h4"]

[ext_resource type="Script" uid="uid://bdanox8olumam" path="res://src/UI/Timeline/AnimationTagUI.gd" id="1"]

[node name="AnimationTagUI" type="Control"]
custom_minimum_size = Vector2(39, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 39.0
offset_bottom = 32.0
mouse_filter = 2
script = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 32, 0, 0, 39, 0, 39, 32)
width = 1.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -16.0
offset_right = 18.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
auto_translate = false
mouse_default_cursor_shape = 2
text = "Idle"
flat = true

[node name="ResizeFrom" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -4.0
offset_right = 4.0
offset_bottom = 32.0
mouse_default_cursor_shape = 10
keep_pressed_outside = true
flat = true

[node name="ResizeTo" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_right = 4.0
offset_bottom = 32.0
grow_horizontal = 0
mouse_default_cursor_shape = 10
keep_pressed_outside = true
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="ResizeFrom" to="." method="_on_resize_from_gui_input"]
[connection signal="gui_input" from="ResizeTo" to="." method="_on_resize_to_gui_input"]
